--- a/src/app/static/header/header.component.html
+++ b/src/app/static/header/header.component.html
@@ -11,6 +11,10 @@
         Menu</a>
     <a mat-button routerLink="contactus" routerLinkActive='active'><span
             class="fa fa-address-card fa-lg"></span> Contact</a>
+    <span class="flex-spacer"></span>
+    <a mat-button (click)="openLoginForm()"><span
+            class="fa fa-sign-in fa-lg"></span> Login</a>
+
 </mat-toolbar>
 
 <div class="container jumbotron" fxLayout="row" fxLayout.sm="column"
