--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -37,6 +37,7 @@
     </div>
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
+    <h4>{{feedbackForm.value|json}}</h4>
     <form [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" >
       <p>
         <mat-form-field class="half-width">
