--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -37,22 +37,37 @@
     </div>
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
-    <h4>{{feedbackForm.value|json}}</h4>
+    <h5>{{feedbackForm.value|json}} {{feedbackForm.status|json}}</h5>
     <form [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" >
       <p>
         <mat-form-field class="half-width">
-          <input matInput formControlName="firstname" placeholder="First Name" required >
+          <input matInput formControlName="firstname" placeholder="First Name" >
+          <mat-error *ngIf="feedbackForm.get('firstname')?.hasError('required')
+          && feedbackForm.get('firstname')?.touched">
+            First Name is required
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input matInput formControlName="lastname" placeholder="Last Name" required >
+          <input matInput formControlName="lastname" placeholder="Last Name" >
+          <mat-error *ngIf="feedbackForm.get('lastname')?.hasError('required')
+          && feedbackForm.get('lastname')?.touched">
+            Last Name is required
+          </mat-error>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field class="half-width">
-          <input matInput formControlName="telnum" placeholder="Tel" type="tel" required >
+          <input matInput formControlName="telnum" placeholder="Tel" type="tel" >
+          <mat-error *ngIf="feedbackForm.get('telnum')?.hasError('required') && feedbackForm.get('telnum')?.touched">
+            Tel is required
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input matInput formControlName="email" placeholder="Email" type="email" required >
+          <input matInput formControlName="email" placeholder="Email" type="email" >
+          <mat-error *ngIf="feedbackForm.get('email')?.hasError('required')
+          && feedbackForm.get('email')?.touched">
+            Email is required
+          </mat-error>
         </mat-form-field>
       </p>
 
@@ -73,9 +88,13 @@
         <mat-form-field class="full-width">
             <textarea matInput formControlName="message" placeholder="feedback" rows="6">
             </textarea>
+          <mat-error *ngIf="feedbackForm.get('message')?.hasError('required')
+          && feedbackForm.get('email')?.touched">
+            Message is required
+          </mat-error>
         </mat-form-field>
       </p>
-      <button type="submit" mat-button class="background-primary text-floral-white" > Send feedback</button>
+      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid" > Send feedback</button>
     </form>
   </div>
 </div>
