--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <div fxFlex>
+  <div fxFlex *ngIf="dishes">
     <mat-grid-list cols="2" rowHeight="200px">
       <mat-grid-tile *ngFor="let dish of dishes"
         [routerLink]="['/dishdetail', dish.id]">
@@ -20,6 +20,12 @@
         </mat-grid-tile-footer>
       </mat-grid-tile>
     </mat-grid-list>
+  </div>
+
+  <div fxFlex fxFlexAlign="center" *ngIf="!dishes">
+    <mat-spinner>
+    </mat-spinner>
+    <h4>Loading ...</h4>
   </div>
 
 </div>
