--- a/src/app/components/dishdetail/dishdetail.component.html
+++ b/src/app/components/dishdetail/dishdetail.component.html
@@ -15,9 +15,18 @@
                     {{dish.description}}
                 </mat-card-content>
                 <mat-card-actions>
+                    <button mat-button
+                        [routerLink]="['/dishdetail', this.prev]"> <span
+                            class="fa fa-chevron-left fa-lg"></span>
+                        PREV</button>
                     <button mat-button>LIKE</button>
                     <button mat-button>SHARE</button>
                     <button mat-button (click)="goBack()">BACK</button>
+                    <span class="flex-spacer"></span>
+                    <button mat-button
+                        [routerLink]="['/dishdetail', this.next]">
+                        NEXT <span
+                            class="fa fa-chevron-right fa-lg"></span></button>
                 </mat-card-actions>
             </mat-card>
         </div>
