--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,83 +1,82 @@
 <div class="container" fxLayout="column" fxLayoutGap="10px">
 
-    <div fxFlex>
-        <div>
-            <h3>Contact Us</h3>
-            <hr>
-        </div>
+  <div fxFlex>
+    <div>
+      <h3>Contact Us</h3>
+      <hr>
     </div>
+  </div>
 
-    <div fxFlex>
-        <h3>Location Information</h3>
-        <div fxLayout="column" fxLayout.gt-sm="row">
-            <div fxFlex="50" fxFlexOffset="10px">
-                <h4>Our Address</h4>
-                <address>
-                    121, Clear Water Bay Road<br>
-                    Clear Water Bay, Kowloon<br>
-                    HONG KONG<br>
-                    <i class="fa fa-phone"></i>: +852 1234 5678<br>
-                    <i class="fa fa-fax"></i>: +852 8765 4321<br>
-                    <i class="fa fa-envelope"></i>:
-                    <a href="mailto:confusion@food.net">confusion@food.net</a>
-                </address>
-                <p></p>
-                <div>
-                    <a mat-raised-button href="tel:+85212345678"><i
-                            class="fa fa-phone"></i> Call</a>
-                    <a mat-raised-button><i class="fa fa-skype"></i> Skype</a>
-                    <a mat-raised-button href="mailto:confusion@food.net"><i
-                            class="fa fa-envelope-o"></i> Email</a>
-                </div>
-            </div>
-            <div fxFlex="40">
-                <h4>Map of our Location</h4>
-            </div>
+  <div fxFlex>
+    <h3>Location Information</h3>
+    <div fxLayout="column" fxLayout.gt-sm="row">
+      <div fxFlex="50" fxFlexOffset="10px">
+        <h4>Our Address</h4>
+        <address>
+          121, Clear Water Bay Road<br>
+          Clear Water Bay, Kowloon<br>
+          HONG KONG<br>
+          <i class="fa fa-phone"></i>: +852 1234 5678<br>
+          <i class="fa fa-fax"></i>: +852 8765 4321<br>
+          <i class="fa fa-envelope"></i>:
+          <a href="mailto:confusion@food.net">confusion@food.net</a>
+        </address>
+        <p></p>
+        <div>
+          <a mat-raised-button href="tel:+85212345678"><i
+              class="fa fa-phone"></i> Call</a>
+          <a mat-raised-button><i class="fa fa-skype"></i> Skype</a>
+          <a mat-raised-button href="mailto:confusion@food.net"><i
+              class="fa fa-envelope-o"></i> Email</a>
         </div>
+      </div>
+      <div fxFlex="40">
+        <h4>Map of our Location</h4>
+      </div>
     </div>
+  </div>
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
     <h5>{{feedbackForm.value|json}} {{feedbackForm.status|json}}</h5>
-    <form [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" >
+    <form [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
       <p>
         <mat-form-field class="half-width">
-          <input matInput formControlName="firstname" placeholder="First Name" >
-          <mat-error *ngIf="feedbackForm.get('firstname')?.hasError('required')
-          && feedbackForm.get('firstname')?.touched">
-            First Name is required
+          <input matInput formControlName="firstname" placeholder="First Name">
+          <mat-error *ngIf="formErrors.firstname">
+            {{formErrors.firstname}}
           </mat-error>
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input matInput formControlName="lastname" placeholder="Last Name" >
-          <mat-error *ngIf="feedbackForm.get('lastname')?.hasError('required')
-          && feedbackForm.get('lastname')?.touched">
-            Last Name is required
+          <input matInput formControlName="lastname" placeholder="Last Name">
+          <mat-error *ngIf="formErrors.lastname">
+            {{formErrors.lastname}}
           </mat-error>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field class="half-width">
-          <input matInput formControlName="telnum" placeholder="Tel" type="tel" >
-          <mat-error *ngIf="feedbackForm.get('telnum')?.hasError('required') && feedbackForm.get('telnum')?.touched">
-            Tel is required
+          <input matInput formControlName="telnum" placeholder="Tel" type="tel">
+          <mat-error *ngIf="formErrors.telnum">
+            {{formErrors.telnum}}
           </mat-error>
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input matInput formControlName="email" placeholder="Email" type="email" >
-          <mat-error *ngIf="feedbackForm.get('email')?.hasError('required')
-          && feedbackForm.get('email')?.touched">
-            Email is required
+          <input matInput formControlName="email" placeholder="Email"
+            type="email">
+          <mat-error *ngIf="formErrors.email">
+            {{formErrors.email}}
           </mat-error>
         </mat-form-field>
       </p>
 
       <table class="form-size">
         <td>
-          <mat-slide-toggle formControlName="agree">May we contact you</mat-slide-toggle>
+          <mat-slide-toggle formControlName="agree">May we contact you
+          </mat-slide-toggle>
         </td>
         <td>
           <mat-select placeholder="How?" formControlName="contacttype">
-            <mat-option *ngFor="let type of contactType" [value]="type" >
+            <mat-option *ngFor="let type of contactType" [value]="type">
               {{type}}
             </mat-option>
           </mat-select>
@@ -86,15 +85,17 @@
       </table>
       <p>
         <mat-form-field class="full-width">
-            <textarea matInput formControlName="message" placeholder="feedback" rows="6">
+          <textarea matInput formControlName="message" placeholder="feedback"
+            rows="6">
             </textarea>
-          <mat-error *ngIf="feedbackForm.get('message')?.hasError('required')
-          && feedbackForm.get('email')?.touched">
-            Message is required
+          <mat-error *ngIf="formErrors.message">
+            {{formErrors.message}}
           </mat-error>
         </mat-form-field>
       </p>
-      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid" > Send feedback</button>
+      <button type=" submit" mat-button
+        class="background-primary text-floral-white"
+        [disabled]="feedbackForm.invalid"> Send feedback</button>
     </form>
   </div>
 </div>
