--- a/src/app/components/dishdetail/dishdetail.component.html
+++ b/src/app/components/dishdetail/dishdetail.component.html
@@ -1,8 +1,7 @@
-<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column"
-    fxLayoutAlign.gt-md="space-around center" fxLayoutGap="10px"
-    fxLayoutGap.xs="0">
-
-    <div *ngIf="dish">
+<div class="container" fxLayout="column">
+    <div *ngIf="dish" class="container" fxLayout="row" fxLayout.lt-sm="column"
+        fxLayoutAlign.gt-md="space-around center" fxLayoutGap="30px"
+        fxLayoutGap.xs="0">
         <div fxFlex="40">
             <mat-card>
                 <mat-card-header>
@@ -16,8 +15,8 @@
                 </mat-card-content>
                 <mat-card-actions>
                     <button mat-button
-                        [routerLink]="['/dishdetail', this.prev]"> <span
-                            class="fa fa-chevron-left fa-lg"></span>
+                        [routerLink]="['/dishdetail', this.prev]">
+                        <span class="fa fa-chevron-left fa-lg"></span>
                         PREV</button>
                     <button mat-button>LIKE</button>
                     <button mat-button>SHARE</button>
@@ -31,22 +30,61 @@
             </mat-card>
         </div>
 
-        <div class="container" fxLayout="column" fxLayoutGap="10px">
-            <div>
+        <div fxLayout="column" fxFlex="60">
+            <div fxFlexOffset="20px">
                 <h3>COMMENTS</h3>
             </div>
             <mat-list fxFlex fxLayout="column">
-                <mat-list-item *ngFor="let comment of dish.comments" fxFlex>
+                <mat-list-item *ngFor="let comment of dish.comments"
+                    class="comment" fxLayout="column">
 
-                    {{comment.comment}} <br>
-                    {{comment.rating}} Stars <br>
+                    {{comment.comment}} <br />
+                    {{comment.rating}} Stars <br />
                     -- {{comment.author}}
                     {{comment.date|date}}
 
                 </mat-list-item>
             </mat-list>
 
+            <form [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+                <p>
+                    <mat-form-field class="full-width">
+                        <input matInput placeholder="Author"
+                            formControlName="author">
+                        <mat-error *ngIf="formErrors.author">
+                            {{formErrors.author}}
+                        </mat-error>
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-slider thumbLabel tickInterval="1" min="1" max="5"
+                        step="1" value="5">
+                    </mat-slider>
+                </p>
+
+                <p>
+                    <mat-form-field class="full-width">
+                        <textarea matInput placeholder="Your comment"
+                            formControlName="comment" rows="6"></textarea>
+                        <mat-error *ngIf="formErrors.comment">
+                            {{formErrors.comment}}
+                        </mat-error>
+                    </mat-form-field>
+
+                </p>
+
+                <button type="submit" mat-button
+                    class="background-primary text-floral-white"
+                    [disabled]="this.commentForm.invalid">Submit</button>
+
+            </form>
         </div>
+    </div>
+
+    <div fxFlex fxFlexAlign="center" *ngIf="!dish">
+        <mat-spinner>
+        </mat-spinner>
+        <h4>Loading ...</h4>
     </div>
 
 </div>
